@@ -1407,4 +1407,12 @@ Subject length lower bound = 2
     123     
 No match
 
+/[\s[:^ascii:]]/B,ucp
+------------------------------------------------------------------
+        Bra
+        [\x80-\xff\p{Xsp}\x{100}-\x{ffff}]
+        Ket
+        End
+------------------------------------------------------------------
+
 # End of testinput12
